--- a/index.html
+++ b/index.html
@@ -2902,7 +2902,7 @@
             <h2 class="movie-title">Bicentennial Man</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">IMDB: TBA</span>
+                <span class="movie-rating-text">IMDB: 100.0</span>
               </div>
               <span class="movie-year-text">1999</span>
             </div>
@@ -2936,7 +2936,7 @@
             <h2 class="movie-title">The 13th Warrior</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">IMDB: TBA</span>
+                <span class="movie-rating-text">IMDB: 7.5</span>
               </div>
               <span class="movie-year-text">1999</span>
             </div>
@@ -2970,7 +2970,7 @@
             <h2 class="movie-title">The Faculty</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">IMDB: TBA</span>
+                <span class="movie-rating-text">IMDB: 7.5</span>
               </div>
               <span class="movie-year-text">1998</span>
             </div>
@@ -3004,7 +3004,7 @@
             <h2 class="movie-title">Twister</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">IMDB: TBA</span>
+                <span class="movie-rating-text">IMDB: 8.0</span>
               </div>
               <span class="movie-year-text">1996</span>
             </div>
@@ -3078,7 +3078,7 @@
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
                 <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                <span><i class="fa-solid fa-heart-circe-plus"></i></span>
               </a>
               <a href="#" class="icon RateIt">
                 <div class="tooltip">Rate It</div>
@@ -3105,7 +3105,7 @@
             <h2 class="movie-title">The Mummy</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">IMDB: TBA</span>
+                <span class="movie-rating-text">IMDB: 9.7</span>
               </div>
               <span class="movie-year-text">1999</span>
             </div>
@@ -3139,7 +3139,7 @@
             <h2 class="movie-title">Conspiracy Theory</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">IMDB: TBA</span>
+                <span class="movie-rating-text">IMDB: 9.8</span>
               </div>
               <span class="movie-year-text">1997</span>
             </div>
@@ -5563,6 +5563,40 @@
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text">IMDB: 9.0</span>
+              </div>
+              <span class="movie-year-text">2023</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/qVKirUdmoex8SdfUk8WDDWwrcCh.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Exorcist: Believer</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">IMDB: 8.5</span>
               </div>
               <span class="movie-year-text">2023</span>
             </div>
