--- a/MoviePage.html
+++ b/MoviePage.html
@@ -2984,7 +2984,7 @@
               <h2 class="movie-title">Bicentennial Man</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 100.0</span>
                 </div>
                 <span class="movie-year-text">1999</span>
               </div>
@@ -3018,7 +3018,7 @@
               <h2 class="movie-title">The 13th Warrior</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 7.5</span>
                 </div>
                 <span class="movie-year-text">1999</span>
               </div>
@@ -3052,7 +3052,7 @@
               <h2 class="movie-title">The Faculty</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 7.5</span>
                 </div>
                 <span class="movie-year-text">1998</span>
               </div>
@@ -3086,7 +3086,7 @@
               <h2 class="movie-title">Twister</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 8.0</span>
                 </div>
                 <span class="movie-year-text">1996</span>
               </div>
@@ -3160,7 +3160,7 @@
               <div class="action-circle">
                 <a href="#" class="icon AddFavorite">
                   <div class="tooltip">Add to Favorite</div>
-                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                  <span><i class="fa-solid fa-heart-circe-plus"></i></span>
                 </a>
                 <a href="#" class="icon RateIt">
                   <div class="tooltip">Rate It</div>
@@ -3187,7 +3187,7 @@
               <h2 class="movie-title">The Mummy</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 9.7</span>
                 </div>
                 <span class="movie-year-text">1999</span>
               </div>
@@ -3221,7 +3221,7 @@
               <h2 class="movie-title">Conspiracy Theory</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 9.8</span>
                 </div>
                 <span class="movie-year-text">1997</span>
               </div>
@@ -3255,7 +3255,7 @@
               <h2 class="movie-title">Ransom</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 9.0</span>
                 </div>
                 <span class="movie-year-text">1996</span>
               </div>
@@ -3289,7 +3289,7 @@
               <h2 class="movie-title">The Last Boy Scout</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 5.0</span>
                 </div>
                 <span class="movie-year-text">1991</span>
               </div>
@@ -3357,7 +3357,7 @@
               <h2 class="movie-title">Primal Fear</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 8.9</span>
                 </div>
                 <span class="movie-year-text">1996</span>
               </div>
@@ -3391,7 +3391,7 @@
               <h2 class="movie-title">Basic Instinct</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 9.9</span>
                 </div>
                 <span class="movie-year-text">1992</span>
               </div>
@@ -3425,7 +3425,7 @@
               <h2 class="movie-title">American History X</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 10.0</span>
                 </div>
                 <span class="movie-year-text">1998</span>
               </div>
@@ -5645,6 +5645,74 @@
               <div class="movie-rating">
                 <div class="ratings-container">
                   <span class="movie-rating-text">IMDB: 9.0</span>
+                </div>
+                <span class="movie-year-text">2023</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/qVKirUdmoex8SdfUk8WDDWwrcCh.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">The Exorcist: Believer</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">IMDB: 8.5</span>
+                </div>
+                <span class="movie-year-text">2023</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/jM5bJxSdJqYDjX9AYCc8LRwLkil.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">A Haunting in Venice</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">IMDB: 7.5</span>
                 </div>
                 <span class="movie-year-text">2023</span>
               </div>
