--- a/index.html
+++ b/index.html
@@ -3173,7 +3173,7 @@
             <h2 class="movie-title">Ransom</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">IMDB: TBA</span>
+                <span class="movie-rating-text">IMDB: 9.0</span>
               </div>
               <span class="movie-year-text">1996</span>
             </div>
@@ -3207,7 +3207,7 @@
             <h2 class="movie-title">The Last Boy Scout</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">IMDB: TBA</span>
+                <span class="movie-rating-text">IMDB: 5.0</span>
               </div>
               <span class="movie-year-text">1991</span>
             </div>
@@ -3275,7 +3275,7 @@
             <h2 class="movie-title">Primal Fear</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">IMDB: TBA</span>
+                <span class="movie-rating-text">IMDB: 8.9</span>
               </div>
               <span class="movie-year-text">1996</span>
             </div>
@@ -3309,7 +3309,7 @@
             <h2 class="movie-title">Basic Instinct</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">IMDB: TBA</span>
+                <span class="movie-rating-text">IMDB: 9.9</span>
               </div>
               <span class="movie-year-text">1992</span>
             </div>
@@ -3343,7 +3343,7 @@
             <h2 class="movie-title">American History X</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">IMDB: TBA</span>
+                <span class="movie-rating-text">IMDB: 10.0</span>
               </div>
               <span class="movie-year-text">1998</span>
             </div>
@@ -5597,6 +5597,40 @@
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text">IMDB: 8.5</span>
+              </div>
+              <span class="movie-year-text">2023</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/jM5bJxSdJqYDjX9AYCc8LRwLkil.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">A Haunting in Venice</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">IMDB: 7.5</span>
               </div>
               <span class="movie-year-text">2023</span>
             </div>
