--- a/MoviePage.html
+++ b/MoviePage.html
@@ -3086,7 +3086,7 @@
               <h2 class="movie-title">Reservoir Dogs</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 6.0</span>
                 </div>
                 <span class="movie-year-text">1992</span>
               </div>
@@ -3493,7 +3493,7 @@
               <h2 class="movie-title">What Woman Want</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 10.0</span>
                 </div>
                 <span class="movie-year-text">2000</span>
               </div>
@@ -4030,13 +4030,353 @@
           <div class="movie-item">
             <div class="movie-content">
               <img
+                src="https://www.themoviedb.org/t/p/original/7nuGPpCsASSP7qalmIbmYPJztCX.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">The People vs. Larry Flynt</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">IMDB: TBA</span>
+                </div>
+                <span class="movie-year-text">1996</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/kU4XirVTkejLQ1gJQgPg2M3HuAA.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Forever Young</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">IMDB: TBA</span>
+                </div>
+                <span class="movie-year-text">1992</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/aMGhaSkhkFwz33hKEsBrJ3ptx3g.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Hoffa</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">IMDB: TBA</span>
+                </div>
+                <span class="movie-year-text">1992</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/nEDvTB9cP2oIKY0M1ZdDvuUEJ8d.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Fallen</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">IMDB: TBA</span>
+                </div>
+                <span class="movie-year-text">1998</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/7atMCqRaDpAOnGsteTRm17zmvN3.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">The Bone Collector</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">IMDB: TBA</span>
+                </div>
+                <span class="movie-year-text">1999</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/bUeiwBQdupBLQthMCHKV7zv56uv.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Training Day</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">IMDB: TBA</span>
+                </div>
+                <span class="movie-year-text">2001</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/z8WqDIUC00TPX6U24ah0C7IMEKf.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Just Cause</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">IMDB: TBA</span>
+                </div>
+                <span class="movie-year-text">1995</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/seMydAaoxQP6F0xbE1jOcTmn5Jr.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">The Thin Red Line</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">IMDB: TBA</span>
+                </div>
+                <span class="movie-year-text">1998</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/6gDMQwnWPQfk0IqnkZHkrNSPQY4.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Dark City</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">IMDB: TBA</span>
+                </div>
+                <span class="movie-year-text">1998</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
+                src="https://www.themoviedb.org/t/p/original/njn4FAjosndf9Y13zgflCK0DI9o.jpg"
+                class="movie-poster"
+              />
+              <h2 class="movie-title">Dead Man Walking</h2>
+              <div class="movie-rating">
+                <div class="ratings-container">
+                  <span class="movie-rating-text">IMDB: TBA</span>
+                </div>
+                <span class="movie-year-text">1995</span>
+              </div>
+              <div class="action-circle">
+                <a href="#" class="icon AddFavorite">
+                  <div class="tooltip">Add to Favorite</div>
+                  <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+                </a>
+                <a href="#" class="icon RateIt">
+                  <div class="tooltip">Rate It</div>
+                  <span><i class="fa-solid fa-star"></i></span>
+                </a>
+                <a href="#" class="icon watchlist">
+                  <div class="tooltip">Add to Watchlist</div>
+                  <span><i class="bx bx-list-plus"></i></span>
+                </a>
+                <a href="https://www.youtube.com" class="icon youtube">
+                  <div class="tooltip">Play Trailer</div>
+                  <span><i class="fab fa-youtube"></i></span>
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="movie-item">
+            <div class="movie-content">
+              <img
                 src="https://www.themoviedb.org/t/p/original/2gUfJKfJ6LwdqQebiAWuNzIWyp9.jpg"
                 class="movie-poster"
               />
               <h2 class="movie-title">What Dreams May Come</h2>
               <div class="movie-rating">
                 <div class="ratings-container">
-                  <span class="movie-rating-text">IMDB: TBA</span>
+                  <span class="movie-rating-text">IMDB: 9.2</span>
                 </div>
                 <span class="movie-year-text">1998</span>
               </div>
