--- a/Watchlist.html
+++ b/Watchlist.html
@@ -341,40 +341,6 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
-              src="https://www.themoviedb.org/t/p/original/gWZz6bmuzxdfW5siVGW6IYcUHuF.jpg"
-              class="movie-poster"
-            />
-            <h2 class="movie-title">The Fifth Element</h2>
-            <div class="movie-rating">
-              <div class="ratings-container">
-                <span class="movie-rating-text">IMDB: TBA</span>
-              </div>
-              <span class="movie-year-text">1997</span>
-            </div>
-            <div class="action-circle">
-              <a href="#" class="icon AddFavorite">
-                <div class="tooltip">Add to Favorite</div>
-                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
-              </a>
-              <a href="#" class="icon RateIt">
-                <div class="tooltip">Rate It</div>
-                <span><i class="fa-solid fa-star"></i></span>
-              </a>
-              <a href="#" class="icon watchlist">
-                <div class="tooltip">Add to Watchlist</div>
-                <span><i class="bx bx-list-plus"></i></span>
-              </a>
-              <a href="https://www.youtube.com" class="icon youtube">
-                <div class="tooltip">Play Trailer</div>
-                <span><i class="fab fa-youtube"></i></span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <div class="movie-item">
-          <div class="movie-content">
-            <img
               src="https://www.themoviedb.org/t/p/original/rLOk4z9zL1tTukIYV56P94aZXKk.jpg"
               alt="Movie 2 Poster"
               class="movie-poster"
@@ -2345,7 +2311,7 @@
           </div>
         </div>
 
-        <div class="movie-item">
+        <!--   <div class="movie-item">
           <div class="movie-content">
             <img
               src="https://www.themoviedb.org/t/p/original/5AfpV9Mw9gWqLgwncu82osqfvRw.jpg"
@@ -2650,7 +2616,7 @@
             </div>
           </div>
         </div>
-
+ -->
         <div class="movie-item">
           <div class="movie-content">
             <img
