--- a/index.html
+++ b/index.html
@@ -3366,6 +3366,40 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://www.themoviedb.org/t/p/original/m1hhYP6OScjKU5Z9iZaWirSn4I6.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Pleasantville</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">IMDB: 9.5</span>
+              </div>
+              <span class="movie-year-text">1998</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://www.themoviedb.org/t/p/original/wuYC1S2xsSJOv7NbWZLKAFY3SLp.jpg"
               class="movie-poster"
             />
@@ -3440,7 +3474,7 @@
             <h2 class="movie-title">The Fifth Element</h2>
             <div class="movie-rating">
               <div class="ratings-container">
-                <span class="movie-rating-text">IMDB: TBA</span>
+                <span class="movie-rating-text">IMDB: 9.6</span>
               </div>
               <span class="movie-year-text">1997</span>
             </div>
