--- a/index.html
+++ b/index.html
@@ -3400,6 +3400,176 @@
         <div class="movie-item">
           <div class="movie-content">
             <img
+              src="https://www.themoviedb.org/t/p/original/aOYHJclz1yZdFT3hdMY8TeYU4fk.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Perfect Storm</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">IMDB: 9.4</span>
+              </div>
+              <span class="movie-year-text">2000</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/gjHergpHMkxtgpSr8fTbasVmXDS.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Insomnia</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">IMDB: 9.5</span>
+              </div>
+              <span class="movie-year-text">2002</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/fWZd815QxUCUcrWQZwUkAp9ljG.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">The Patriot</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">IMDB: 10.0</span>
+              </div>
+              <span class="movie-year-text">2000</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/rEIg5yJdNOt9fmX4P8gU9LeNoTQ.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">A Beautiful Mind</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">IMDB: 5.0</span>
+              </div>
+              <span class="movie-year-text">2001</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/hHwW1YDwJG5wR0WgpiKSNDZxX7q.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Leaving Las Vegas</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">IMDB: 4.0</span>
+              </div>
+              <span class="movie-year-text">1995</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
               src="https://www.themoviedb.org/t/p/original/wuYC1S2xsSJOv7NbWZLKAFY3SLp.jpg"
               class="movie-poster"
             />
@@ -3579,6 +3749,40 @@
                 <span class="movie-rating-text">IMDB: 9.99</span>
               </div>
               <span class="movie-year-text">1989</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/j4fDIiv0N78Sfp9Wn0BaYzbIj1B.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">Scent of a Woman</h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">IMDB: 9.8</span>
+              </div>
+              <span class="movie-year-text">1992</span>
             </div>
             <div class="action-circle">
               <a href="#" class="icon AddFavorite">
@@ -4436,6 +4640,42 @@
             <div class="movie-rating">
               <div class="ratings-container">
                 <span class="movie-rating-text">IMDB: 8.5</span>
+              </div>
+              <span class="movie-year-text">2023</span>
+            </div>
+            <div class="action-circle">
+              <a href="#" class="icon AddFavorite">
+                <div class="tooltip">Add to Favorite</div>
+                <span><i class="fa-solid fa-heart-circle-plus"></i></span>
+              </a>
+              <a href="#" class="icon RateIt">
+                <div class="tooltip">Rate It</div>
+                <span><i class="fa-solid fa-star"></i></span>
+              </a>
+              <a href="#" class="icon watchlist">
+                <div class="tooltip">Add to Watchlist</div>
+                <span><i class="bx bx-list-plus"></i></span>
+              </a>
+              <a href="https://www.youtube.com" class="icon youtube">
+                <div class="tooltip">Play Trailer</div>
+                <span><i class="fab fa-youtube"></i></span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="movie-item">
+          <div class="movie-content">
+            <img
+              src="https://www.themoviedb.org/t/p/original/mBaXZ95R2OxueZhvQbcEWy2DqyO.jpg"
+              class="movie-poster"
+            />
+            <h2 class="movie-title">
+              The Hunger Games: The Ballad of Songbirds & Snakes
+            </h2>
+            <div class="movie-rating">
+              <div class="ratings-container">
+                <span class="movie-rating-text">IMDB: 9.1</span>
               </div>
               <span class="movie-year-text">2023</span>
             </div>
